ensure popup menus overlap with parents

--- a/fiveninesix/media/style.css
+++ b/fiveninesix/media/style.css
@@ -33,8 +33,9 @@ img {
     margin: 0;
 }
 
-#nav ul li {
+#nav > ul > li {
     float: left;
+    margin-bottom: -5px;
 }
 #nav ul.children {
     display: none;
@@ -44,6 +45,7 @@ img {
     border: 1px solid black;
     border-top: 0;
     margin-left: 15px;
+    margin-top: -5px;
     min-width: 125px;
 }
 #nav ul.children li {
@@ -144,7 +146,6 @@ img {
     text-align: left;
 }
 
-#popup_details {
-    width: 100%;
-    height: 100%;
+.popup_template {
+    font-size: 12px;
 }
